added basic frogger game

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Final Web 337 Project</title>
 </head>
 <body>
+    <h2><a href="./frogger/index.html">Ryder's Frogger Game</a></h2>
     
 </body>
 </html>
