Lose the Bias v0.1

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Web 337 Project</title>
+    <title>Lose the Bias!</title>
 </head>
 <body>
-    <h2><a href="./frogger/index.html">Ryder's Frogger Game</a></h2>
+    <h2>Lose the Bias!</h2>
     
 </body>
 </html>
