Reorganized html files
moved all inside html pages to the app folder, and put the login page as the index file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lose the Bias!</title>
+    <title>Lose The Bias</title>
 </head>
-
 <body>
-    <h2>Lose the Bias!</h2>
+    <div>
+        <div>
+            <span>Username</span>
+            <input type="text" id="user">
+        </div>
+        <div>
+            <span>Password</span>
+            <input type="password" id="password">
+        </div>
+        <div>
+            <button id="userLogButton">
+                Log In
+            </button>
+        </div>
 
-    <input type="text" id="postTitle" placeholder="Post title">
-    <input type="text" id="postContent" placeholder="Post content">
-    <button id="createPost">Create Post</button>
-    <br><br>
-    <input type="text" id="postId" placeholder="Post ID">
-    <input type="text" id="comment" placeholder="Enter comment">
-    <button id="postComment">Post Comment</button>
-    <br><br>
-    <input type="text" id="commentId" placeholder="Comment ID">
-    <input type="text" id="reply" placeholder="Enter reply">
-    <button id="postReply">Post Reply</button>
-    <br><br>
-    <input type="text" id="deleteCommentId" placeholder="Delete comment ID">
-    <button id="deleteComment">Delete Comment</button>
-
-    <script src="local.js"></script>
+        <div>
+            <span>Username</span>
+            <input type="text" id="user">
+        </div>
+        <div>
+            <span>Password</span>
+            <input type="password" id="password">
+        </div>
+        <div>
+            <button id="userLogButton">
+                Sign up
+            </button>
+        </div>
+    </div>
 </body>
-
 </html>
