--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
             <input type="password" id="password">
         </div>
         <div>
-            <button id="userLogButton">
+            <button onclick="loginUser();" id="userLogButton">
                 Log In
             </button>
         </div>
@@ -30,10 +30,12 @@
             <input type="password" id="password">
         </div>
         <div>
-            <button id="userLogButton">
+            <button onclick="addUser();" id="userLogButton">
                 Sign up
             </button>
         </div>
+        <div id="createMessage"></div>
     </div>
+<script src="local.js"></script>
 </body>
 </html>
