--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,11 +23,11 @@
 
         <div>
             <span>Username</span>
-            <input type="text" id="user">
+            <input type="text" id="user1">
         </div>
         <div>
             <span>Password</span>
-            <input type="password" id="password">
+            <input type="password" id="password1">
         </div>
         <div>
             <button onclick="addUser();" id="userLogButton">
