--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lose the Bias!</title>
+    <title>Lose the Bias</title>
 </head>
 <body>
     <h2>Lose the Bias!</h2>
