--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
           <i class='bx bxs-lock-alt' ></i>
         </div>
         <div id="btnBox">
-            <button onclick="loginUserTest();" type="submit" id="btn">
+            <button onclick="loginUser();" type="submit" id="btn">
                 Login
             </button>
         </div>
