--- a/frontend/app/about.html
+++ b/frontend/app/about.html
@@ -1,43 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>About Us</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <h1>About Us</h1>
-        <div class="container">
-                <p>We are on a mission to revolutionize the way news is
-                    consumed. Our upcoming news website leverages the power of
-                    AI to distill news articles into concise summaries,
-                    highlighting the core facts and sentiment scores of each
-                    story. This innovative approach is designed to keep our
-                    users informed in the most efficient way possible.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>About Us</title>
+    <link rel="stylesheet" href="./about.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <ul class="background">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
-                <p>Understanding the diverse interests of our readers, we are
-                    developing a customizable news feed that tailors content to
-                    individual preferences. This personalization ensures that
-                    our users are always in the loop with stories that resonate
-                    with their interests and passions.</p>
+    <div class="container">
+      <h1>About Us</h1>
+      <hr />
+      <p>
+        We are on a mission to revolutionize the way news is consumed. Our
+        upcoming news website leverages the power of AI to distill news articles
+        into concise summaries, highlighting the core facts and sentiment scores
+        of each story. This innovative approach is designed to keep our users
+        informed in the most efficient way possible.
+      </p>
 
-                <p>But we're not just about passive consumption. Our platform
-                    encourages active engagement through features that allow
-                    users to vote on sentiment, like, and comment on articles.
-                    We believe in transforming news reading into a dynamic
-                    conversation, fostering a community of informed and engaged
-                    citizens.</p>
+      <p>
+        Understanding the diverse interests of our readers, we are developing a
+        customizable news feed that tailors content to individual preferences.
+        This personalization ensures that our users are always in the loop with
+        stories that resonate with their interests and passions.
+      </p>
 
-                <p>Join us on this journey to create a more informed and
-                    connected world.</p>
-                <div class="subscription">
-                        <h2>Stay Updated!</h2>
-                        <p>Subscribe to our newsletter for the latest development updates:</p>
-                        <form action="/subscribe" method="post">
-                            <input type="email" name="email" placeholder="Enter your email" required>
-                            <button type="submit">Subscribe</button>
-                        </form>
-                </div>
-        </div>
-    </body>
+      <p>
+        But we're not just about passive consumption. Our platform encourages
+        active engagement through features that allow users to vote on
+        sentiment, like, and comment on articles. We believe in transforming
+        news reading into a dynamic conversation, fostering a community of
+        informed and engaged citizens.
+      </p>
+
+      <p>
+        Join us on this journey to create a more informed and connected world.
+      </p>
+      <hr />
+      <div class="subscription">
+        <h2>Stay Updated!</h2>
+
+        <p>Subscribe to our newsletter for the latest development updates:</p>
+        <form action="/subscribe" method="post">
+          <input
+            id="mail"
+            type="email"
+            name="email"
+            placeholder="Enter your email"
+            required
+          />
+          <button id="subbtn" type="submit">
+            Subscribe <i class="bx bxs-bell-ring"></i>
+          </button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
