--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -4,18 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./home.css">
     <title>Lose the Bias</title>
 </head>
 
 <body>
-    <h2>Lose the Bias!</h2>
-
-    <div id="posts">
+    <div id="top-panel">
+      <div id="site-title">Lose the Bias</div>
+      <input type="text" id="search-box" placeholder="Search...">
+    </div>
+  
+    <div id="side-panel">
+      <button>About</button>
+      <button>Help</button>
+      <button>Post</button>
+    </div>
+  
+    <div id="content">
 
     </div>
-
-    <script src="home.js"></script>
-
 </body>
 
 </html>
