--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -10,8 +10,9 @@
 
 <body>
     <div id="top-panel">
-      <div id="site-title">Lose the Bias</div>
+      <div id="title">Lose the Bias</div>
       <input type="text" id="search-box" placeholder="Search...">
+
     </div>
   
     <div id="side-panel">
@@ -20,9 +21,10 @@
       <button>Post</button>
     </div>
   
-    <div id="content">
+    <div id="posts">
 
     </div>
+    <script src="./home.js"></script>
 </body>
 
 </html>
