started worked on user settings

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -17,9 +17,9 @@
       </div>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
-        <a>
+        <button id="userSettings">
           <img src="./images/default.png" id="userPic">
-        </a>
+        </button>
         
       </div>
 
@@ -36,8 +36,8 @@
         <button><i class='bx bx-world'></i>&nbsp;World</button>
       </div>
       <div>
-        <button><i class='bx bx-help-circle'></i>&nbsp;About</button>
-        <button><i class='bx bx-support'></i>&nbsp;Help</button>
+        <button id="aboutPage"><i class='bx bx-help-circle'></i>&nbsp;About</button>
+        <button id="helpPage"><i class='bx bx-support'></i>&nbsp;Help</button>
       </div>
       <!--<div>
     
