Add handlers for sidebar topic buttons

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -27,13 +27,13 @@
   
     <div id="side-panel">
       <div>
-        <button><i class='bx bxs-briefcase'></i>&nbsp;Bussines</button>
-        <button><i class='bx bx-line-chart'></i>&nbsp;Economics</button>
-        <button><i class='bx bxs-tv'></i>&nbsp;Entertainment</button>
-        <button><i class='bx bx-plus-medical'></i>&nbsp;Health</button>
-        <button><i class='bx bxs-select-multiple'></i>&nbsp;Politics</button>
-        <button><i class='bx bxl-react'></i>&nbsp;Science</button>
-        <button><i class='bx bx-world'></i>&nbsp;World</button>
+        <button class="topic-button"><i class='bx bxs-briefcase'></i>&nbsp;Business</button>
+        <button class="topic-button"><i class='bx bx-line-chart'></i>&nbsp;Economics</button>
+        <button class="topic-button"><i class='bx bxs-tv'></i>&nbsp;Entertainment</button>
+        <button class="topic-button"><i class='bx bx-plus-medical'></i>&nbsp;Health</button>
+        <button class="topic-button"><i class='bx bxs-select-multiple'></i>&nbsp;Politics</button>
+        <button class="topic-button"><i class='bx bxl-react'></i>&nbsp;Science</button>
+        <button class="topic-button"><i class='bx bx-world'></i>&nbsp;World</button>
       </div>
       <div>
         <button id="aboutPage"><i class='bx bx-help-circle'></i>&nbsp;About</button>
