Update default profile picture path

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -18,7 +18,7 @@
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
         <button id="userSettings">
-          <img src="./images/default.png" id="userPic">
+          <img src="" id="userPic">
         </button>
         
       </div>
