Add Sports and Technology topic buttons

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -34,6 +34,8 @@
         <button class="topic-button"><i class='bx bxs-select-multiple'></i>&nbsp;Politics</button>
         <button class="topic-button"><i class='bx bxl-react'></i>&nbsp;Science</button>
         <button class="topic-button"><i class='bx bx-world'></i>&nbsp;World</button>
+        <button class="topic-button"><i class='bx bx-football'></i>&nbsp;Sports</button>
+        <button class="topic-button"><i class='bx bx-bot'></i>&nbsp;Technology</button>
       </div>
       <div>
         <button id="aboutPage"><i class='bx bx-help-circle'></i>&nbsp;About</button>
