Add removeSession function and logout route

--- a/frontend/app/test.html
+++ b/frontend/app/test.html
@@ -25,19 +25,12 @@
     <input type="text" id="deleteCommentId" placeholder="Delete comment ID">
     <button id="deleteComment">Delete Comment</button>
     <br><br>
-    <input type="text" id="createUsername" placeholder="Username">
-    <input type="password" id="createPassword" placeholder="Password">
-    <button id="createUser">Create User</button>
-    <br><br>
-    <input type="text" id="loginUsername" placeholder="Username">
-    <input type="password" id="loginPassword" placeholder="Password">
-    <button id="loginUser">Login</button>
-    <br><br>
     <form action="/uploads/profilePicture" method="post" enctype="multipart/form-data">
         <input type="file" name="profilePicture" id="uploadFile">
         <button type="submit">Upload</button>
     </form>
     <br><br>
+    <button id="logoutButton">Logout</button>
 
     <script src="../local.js"></script>
 </body>
