added basic comment functionality

--- a/frontend/app/test.html
+++ b/frontend/app/test.html
@@ -11,7 +11,9 @@
     <h2>Lose the Bias!</h2>
 
     <input type="text" id="postTitle" placeholder="Post title">
-    <input type="text" id="postContent" placeholder="Post content">
+    <input type="text" id="postbackground" placeholder="Post background">
+    <input type="text" id="postsummary" placeholder="Post summary">
+    <input type="text" id="postbias" placeholder="Post bias">
     <button id="createPost">Create Post</button>
     <br><br>
     <input type="text" id="postId" placeholder="Post ID">
