modified adding posts locally

--- a/frontend/app/test.html
+++ b/frontend/app/test.html
@@ -14,6 +14,8 @@
     <input type="text" id="postbackground" placeholder="Post background">
     <input type="text" id="postsummary" placeholder="Post summary">
     <input type="text" id="postbias" placeholder="Post bias">
+    <input type="text" id="posttopics" placeholder="Post Topics">
+    <input type="text" id="posturls" placeholder="Post URLs">
     <button id="createPost">Create Post</button>
     <br><br>
     <input type="text" id="postId" placeholder="Post ID">
