Implemented search button

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -17,8 +17,9 @@
       </div>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
+        <button onclick="search()">Search</button>
         <button id="userSettings">
-          <img src="" id="userPic">
+          <img src="./images/default.png" id="userPic">
         </button>
         
       </div>
