started working on user settings

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -18,12 +18,12 @@
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
         <button onclick="search()">Search</button>
-        <button id="userSettings">
+        <button id="userSettings" onclick="showUserSettings();">
           <img src="./images/default.png" id="userPic">
         </button>
         
       </div>
-
+      
     </div>
   
     <div id="side-panel">
