--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -17,7 +17,7 @@
       </div>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
-        <button onclick="search()">Search</button>
+        <button class="searchBtn" onclick="search()"><i class='bx bx-search-alt'></i></button>
         <button id="userSettings" onclick="showUserSettings();">
           <img src="./images/default.png" id="userPic">
         </button>
