User user account/default pic instead of local pic

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -19,7 +19,7 @@
         <input type="text" id="search-box" placeholder="Search...">
         <button class="searchBtn" onclick="search()"><i class='bx bx-search-alt'></i></button>
         <button id="userSettings" onclick="showUserSettings();">
-          <img src="./images/default.png" id="userPic">
+          <img src="" id="userPic">
         </button>
         
       </div>
