Move click/enter handlers to JS

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -17,8 +17,8 @@
       </div>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
-        <button class="searchBtn" onclick="search()"><i class='bx bx-search-alt'></i></button>
-        <button id="userSettings" onclick="showUserSettings();">
+        <button id="search-button" class="searchBtn"><i class='bx bx-search-alt'></i></button>
+        <button id="userSettings">
           <img src="" id="userPic">
         </button>
         
