working on search engine

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -17,7 +17,9 @@
       </div>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
-        <button id="search-button" class="searchBtn"><i class='bx bx-search-alt'></i></button>
+        <button id="search-button" class="searchBtn">
+          <img src="./images/search.png" alt="searchLogo">
+        </button>
         <button id="userSettings">
           <img src="" id="userPic">
         </button>
@@ -42,17 +44,6 @@
         <button id="aboutPage"><i class='bx bx-help-circle'></i>&nbsp;About</button>
         <button id="helpPage"><i class='bx bx-support'></i>&nbsp;Help</button>
       </div>
-      <!--<div>
-    
-        <button id="usernameBtn">
-          <p>
-            username
-          </p>
-          <img src="./images/default.png" id="userPic">
-        </button>
-      </div>
-    </div>
-     </div>-->
     </div>
     <div id="post-pannel">
   
