Make title text redirection

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -12,9 +12,7 @@
 <body>
     <div id="top-panel">
       <img src="./images/logo.jpg" id="mainLogo">
-      <div  id="title">
-        Lose the Bias
-      </div>
+      <a id="title" href="./home.html">Lose the Bias</a>
       <div id="searchEngine">
         <input type="text" id="search-box" placeholder="Search...">
         <button id="search-button" class="searchBtn">
