worked on login page

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./home.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./home.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Lose the Bias</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="top-panel">
-      <img src="./images/logo.jpg" id="mainLogo">
+      <img src="./images/logo.jpg" id="mainLogo" />
       <a id="title" href="./home.html">Lose the Bias</a>
       <div id="searchEngine">
-        <input type="text" id="search-box" placeholder="Search...">
+        <input type="text" id="search-box" placeholder="Search..." />
         <button id="search-button" class="searchBtn">
-          <img src="./images/search.png" alt="searchLogo">
+          <img src="./images/search.png" alt="searchLogo" />
         </button>
         <button id="userSettings">
-          <img src="" id="userPic">
+          <img src="" id="userPic" />
         </button>
-        
       </div>
-      
     </div>
-  
+
     <div id="side-panel">
       <div>
-        <button class="topic-button"><i class='bx bxs-briefcase'></i>&nbsp;Business</button>
-        <button class="topic-button"><i class='bx bx-line-chart'></i>&nbsp;Economics</button>
-        <button class="topic-button"><i class='bx bxs-tv'></i>&nbsp;Entertainment</button>
-        <button class="topic-button"><i class='bx bx-plus-medical'></i>&nbsp;Health</button>
-        <button class="topic-button"><i class='bx bxs-select-multiple'></i>&nbsp;Politics</button>
-        <button class="topic-button"><i class='bx bxl-react'></i>&nbsp;Science</button>
-        <button class="topic-button"><i class='bx bx-world'></i>&nbsp;World</button>
-        <button class="topic-button"><i class='bx bx-football'></i>&nbsp;Sports</button>
-        <button class="topic-button"><i class='bx bx-bot'></i>&nbsp;Technology</button>
+        <button class="topic-button">
+          <i class="bx bxs-briefcase"></i>&nbsp;Business
+        </button>
+        <button class="topic-button">
+          <i class="bx bx-line-chart"></i>&nbsp;Economics
+        </button>
+        <button class="topic-button">
+          <i class="bx bxs-tv"></i>&nbsp;Entertainment
+        </button>
+        <button class="topic-button">
+          <i class="bx bx-plus-medical"></i>&nbsp;Health
+        </button>
+        <button class="topic-button">
+          <i class="bx bxs-select-multiple"></i>&nbsp;Politics
+        </button>
+        <button class="topic-button">
+          <i class="bx bxl-react"></i>&nbsp;Science
+        </button>
+        <button class="topic-button">
+          <i class="bx bx-world"></i>&nbsp;World
+        </button>
+        <button class="topic-button">
+          <i class="bx bx-football"></i>&nbsp;Sports
+        </button>
+        <button class="topic-button">
+          <i class="bx bx-bot"></i>&nbsp;Technology
+        </button>
       </div>
       <div>
-        <button id="aboutPage"><i class='bx bx-help-circle'></i>&nbsp;About</button>
-        <button id="helpPage"><i class='bx bx-support'></i>&nbsp;Help</button>
+        <button style="text-align: left">
+          <a
+            style="text-decoration: none; width: 100%; color: #fff"
+            href="./about.html"
+          >
+            <i class="bx bx-help-circle"></i>&nbsp;About
+          </a>
+        </button>
+        <button style="text-align: left">
+          <a style="text-decoration: none; color: #fff" href="../help.html">
+            <i class="bx bx-support"></i>&nbsp;Help
+          </a>
+        </button>
       </div>
     </div>
-    <div id="post-pannel">
-  
-    </div>
+    <div id="post-pannel"></div>
     <script src="./home.js"></script>
-</body>
-
+  </body>
 </html>
