--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,11 @@
   <title>Login Page</title>
 </head>
 <body>
+  <div id="help">
+    <a href="./help.html">
+      Need Help?
+    </a>
+  </div>
   <div id="wraper">
     <div id="form-box">
       <h2 id="statusTitle">
