help page changes

--- a/frontend/app/home.html
+++ b/frontend/app/home.html
@@ -66,7 +66,7 @@
           </a>
         </button>
         <button style="text-align: left">
-          <a style="text-decoration: none; color: #fff" href="../help.html">
+          <a style="text-decoration: none; color: #fff" href="../help/index.html">
             <i class="bx bx-support"></i>&nbsp;Help
           </a>
         </button>
