--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
         <div id="logreg-link">
           <p>
             Don't have an account? <button onclick="getCreatePage()" id="reg-link">Sign Up</button>
-            <a href="./help.html">
+            <a href="/help/index.html">
               Need Help?
             </a>
           </p>
