--- a/frontend/help/index.html
+++ b/frontend/help/index.html
@@ -10,55 +10,82 @@
     <body>
         <div class="container">
             <div id="header">
-                <img src="./logo.jpg" alt="logo" class="logo">
+                <img src="./logo.jpg" alt="logo" class="logo" id="logo">
                 <h1>Help</h1>
-            </div>
+            </div>                      
             <hr>
 
             <h2 id="accountCreation"><i class="bx bxs-right-arrow"></i> How to create an account?</h2>
                 <div class="info" style="display: none;">
                     <p>1. Navigate to the <a
                             href="https://losethebias.com">login page</a>. Switch
-                        from the login page to the create account page. (sign up button underlined)</p>
+                        from the login page to the create account page (sign up button underlined).</p>
                     <img src="./example1.png" alt="login screen">
-                    <p>2. Enter your username and password. (fields marked below)</p>
+                    <p>2. Enter your username and password (fields marked below).</p>
                     <img src="./example2.png" alt="login screen">
                 </div>
 
             <h2 id="articleSearch"><i class="bx bxs-right-arrow"></i> How to search for an article?</h2>
                 <div class="info" style="display: none;">
                     <p>1. Login to your account.</p>
-                    <p>2. Enter what you are searching for in the top left corner of your browser. (search box marked below)</p>
-                    <img src="./example3.png" id="example3" alt="search box">
+                    <p>2. Enter what you are searching for in the top left corner of your browser (search box marked below).</p>
+                    <img src="./example3.png" class="example" alt="search box">
                     <p>3. Hit enter or click the search button.</p>
                 </div>
 
             <h2 id="updateSettings"><i class="bx bxs-right-arrow"></i> How to update account settings?</h2>
                 <div class="info" style="display: none;">
                     <p>1. Login to your account.</p>
-                    <p>2. Click on your profile icon in the top right corner of your browser. (icon marked below)</p>
+                    <p>2. Click on your profile icon in the top right corner of your browser (icon marked below).</p>
+                    <img src="./example9.png" class="example" alt="profile picture">
                     <p>3. Make any chnages to your name and click save.</p>
                 </div>
 
             <h2 id="changeProfilePicture"><i class="bx bxs-right-arrow"></i> How to change your profile picture?</h2>
                 <div class="info" style="display: none;">
-                    <p>Content about changing your
-                        profile picture...</p>
+                    <p>1. Login to your account.</p>
+                    <p>2. Click the profile picture in the top right corner of your browser (icon marked below).</p>
+                    <img src="./example9.png" class="example" alt="profile picture">
+                    <p>3. Select the file button, then choose and file and upload (buttons marked).</p>
+                    <img src="./example4.png" class="example" alt="profile picture">
                 </div>
-
-            <h2 id="deleteComment"><i class="bx bxs-right-arrow"></i> How to delete a comment?</h2>
+            
+            <h2 id="changeProfilePicture"><i class="bx bxs-right-arrow"></i> How to logout?</h2>
                 <div class="info" style="display: none;">
-                    <p>Content about deleting a comment...</p>
+                    <p>1. Login to your account.</p>
+                    <p>2. Click the profile picture in the top right corner of your browser (icon marked below).</p>
+                    <img src="./example9.png" class="example" alt="profile picture">
+                    <p>3. Click the button in the top right conner (button marked below / button subject to change).</p>
+                    <img src="./example10.png" class="example" alt="profile picture">
+                </div>
+            
+
+            <h2 id="makeComment"><i class="bx bxs-right-arrow"></i> How to make a comment?</h2>
+                <div class="info" style="display: none;">
+                    <p>1. Login to your account.</p>
+                    <p>2. Click the show comments button (marked below).</p>
+                    <img src="./example5.png" class="example" alt="show comments button">
+                    <p>3. Enter your comment in the text box and hit post (marked below).</p>
+                    <img src="./example8.png" class="example" alt="comment text box">
                 </div>
 
             <h2 id="replyComment"><i class="bx bxs-right-arrow"></i> How to reply to a comment?</h2>
                 <div class="info" style="display: none;">
-                    <p>Content about replying to a comment...</p>
+                    <p>1. Login to your account.</p>
+                    <p>2. Click the show comments button (marked below).</p>
+                    <img src="./example5.png" class="example" alt="show comments button">
+                    <p>3. Click the reply button on the comment you want to reply to.</p>
+                    <p>4. Add a reply in the text box and hit post (marked below). </p>
+                    <img src="./example7.png" alt="reply text box">
                 </div>
 
-            <h2 id="makeComment"><i class="bx bxs-right-arrow"></i> How to make a comment?</h2>
+            <h2 id="deleteComment"><i class="bx bxs-right-arrow"></i> How to delete a comment?</h2>
                 <div class="info" style="display: none;">
-                    <p>Content about making a comment...</p>
+                    <p>1. Login to your account.</p>
+                    <p>2. Click the show comments button (marked below).</p>
+                    <img src="./example5.png" class="example" alt="show comments button">
+                    <p>3. Click the delete button on the comment you want to delete (marked below).</p>
+                    <img src="./example6.png" alt="delete button">
                 </div>
 
         </div>
